adjusting of locking mechanism